--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 	<table id="gameMatrix"></table>
+	<p>Mines left: <span id="minesLeft"></span></p>
 	<h1 id="won">You Won!</h1>
 	<h1 id="lost">You Lost!</h1>
 	<button type="button" id="restart">Restart</button>
