--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>My awesome minesweeper</title>
+	<title>Minesweeper - Laura Jacquel</title>
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 	<script src="jquery-3.3.1.js"></script>
 	<script src="script.js"></script>
