--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<p>Mines left: <span id="minesLeft"></span></p>
 	<h1 id="won">You Won!</h1>
 	<h1 id="lost">You Lost!</h1>
-	<button type="button" id="restart">Restart</button>
+	<button type="button" id="restart" class="noselect">Restart</button>
 	<p id="cheat"></p>
 </body>
 </html>
