won in a row counter done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+	<p>Won in a row: <span id="wonInARow"></span></p>
 	<table id="gameMatrix"></table>
 	<p>Mines left: <span id="minesLeft"></span></p>
 	<h1 id="won">You Won!</h1>
