--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 
 <body>
 	<p>Won in a row: <span id="wonInARow"></span></p>
+	<p id="chrono"></p>
 	<table id="gameMatrix"></table>
 	<p>Mines left: <span id="minesLeft"></span></p>
 	<h1 id="won">You Won!</h1>
 	<h1 id="lost">You Lost!</h1>
 	<button type="button" id="restart" class="noselect">Restart</button>
 	<p id="cheat"></p>
+	
+	<!--<button type="button" id="test" class="noselect" onclick="TESTFUNCTION();">TEST</button>-->
 </body>
 </html>
