--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 	<script src="jquery-3.3.1.js"></script>
 	<script src="script.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" /> <!--Font-->
 </head>
 
 <body>
-	<p>Won in a row: <span id="wonInARow"></span></p>
-	<p id="chrono"></p>
-	<table id="gameMatrix"></table>
-	<p>Mines left: <span id="minesLeft"></span></p>
-	<h1 id="won">You Won!</h1>
-	<h1 id="lost">You Lost!</h1>
-	<button type="button" id="restart" class="noselect">Restart</button>
-	<p id="cheat"></p>
-	
-	<!--<button type="button" id="test" class="noselect" onclick="TESTFUNCTION();">TEST</button>-->
+	<div id="container">
+		<h1>Minesweeper</h1>
+		<p>Won in a row: <span id="wonInARow"></span></p>
+		<p id="chrono"></p>
+		<table id="gameMatrix"></table>
+		<p>Mines left: <span id="minesLeft"></span></p>
+		<h1 id="won">You Won!</h1>
+		<h1 id="lost">You Lost!</h1>
+		<button type="button" id="restart" class="noselect">Restart</button>
+		<p id="cheat"></p>
+	</div>
 </body>
 </html>
