--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 		<button type="button" id="restart" class="noselect">Restart</button>
 		<p id="cheat"></p>
 	</div>
+	<div class="footer">
+		<p>Developed by: <a id="myName" href="https://www.linkedin.com/in/laura-jacquel/" target="_blank">Laura Jacquel</a> &copy; 2018</p>
+	</div>
 </body>
 </html>
 
