--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <body>
 	<div id="container">
 		<h1>Minesweeper</h1>
+		
+		<button type="button" id="easy" class="noselect">Easy</button>
+		<button type="button" id="intermediate" class="noselect">Intermediate</button>
+		<button type="button" id="expert" class="noselect">Expert</button>
+		
 		<p class="smallMargin">Mines left: <span id="minesLeft" class="bold"></span></p>
 		<p id="chrono" class="smallMargin"></p>
 		<table id="gameMatrix"></table>
@@ -23,6 +28,7 @@
 		<button type="button" id="restart" class="noselect">Restart</button>
 		<p id="cheat"></p>
 	</div>
+	
 	<div class="footer">
 		<p>Developed by: <a id="myName" href="https://www.linkedin.com/in/laura-jacquel/" target="_blank">Laura Jacquel</a> &copy; 2018</p>
 	</div>
