pre loading mine image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h1>Minesweeper</h1>
 		
 		<button type="button" id="easy" class="noselect">Easy</button>
-		<button type="button" id="intermediate" class="noselect">Intermediate</button>
+		<button type="button" id="intermediate" class="noselect selected">Intermediate</button>
 		<button type="button" id="expert" class="noselect">Expert</button>
 		
 		<p class="smallMargin">Mines left: <span id="minesLeft" class="bold"></span></p>
