crossing misplaced flags when lossing

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8">
 	<title>Minesweeper - Laura Jacquel</title>
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-	<script src="jquery-3.3.1.js"></script>
-	<script src="script.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" /> <!--Font-->
+	<script src="scripts/jquery-3.3.1.js"></script>
+	<script src="scripts/script.js"></script>
+	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/font-raleway.css" /> <!--Font-->
 </head>
 
 <body>
