--- a/minsweeper.html
+++ b/minsweeper.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>Minesweeper - Laura Jacquel</title>
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-	<script src="minesweeper/scripts/jquery-3.3.1.js"></script>
+	<script src="minesweeper/scripts/jquery-3.3.1.min.js"></script>
 	<script src="minesweeper/scripts/script.js"></script>
 	<link rel="stylesheet" type="text/css" href="minesweeper/stylesheets/style.css">
 	<link rel="stylesheet" type="text/css" href="minesweeper/stylesheets/font-raleway.css" /> <!--Font-->
