--- a/minesweeper.html
+++ b/minesweeper.html
@@ -2,6 +2,16 @@
 <html lang="en-us">
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-124911030-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'UA-124911030-1');
+	</script>
+	
 	<meta charset="utf-8">
 	<title>Minesweeper - Laura Jacquel</title>
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
